<resources>
    <string name="app_name">EtanGas</string>
    <string name="autor">JOÃO VITOR LIMA COSTA - RA: 1110482313015</string>

    <string name="tv_gas">Litro da Gasolina</string>
    <string name="tv_eta">Litro do Etanol</string>
    <string name="calc">Calcular</string>
    <string name="valor">R$00.00</string>
    <string name="resultadoE">Etanol é mais vantajoso</string>
    <string name="resultadoG">Gasolina é mais vantajosa</string>
</resources>